--- a/templates/admin.html
+++ b/templates/admin.html
@@ -36,6 +36,7 @@
       <h1 class="logo me-auto"><a href="/">Mentify</a></h1>
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
+          <li><a href="">Home</a></li>
           <li>
             <a class="nav-link scrollto active" href="">Approvals & Tags</a>
           </li>
@@ -151,7 +152,45 @@
                 <div class="icon" style="background: rgb(209, 237, 255)">
                   <i class="bi bi-journal-text" style="color: #1985f0"></i>
                 </div>
-                <h3 class="title"><a href="{{ url_for('view_course') }}?viewer=admin&course_id={{course['course_id']}}">{{course.course_name}}</a></h3>
+                <h3 class="title"><a href="{{ url_for('view_course') }}?viewer=admin&course_id={{course['course_id']}}&mentee_id=0">{{course.course_name}}</a></h3>
+                <p class="description">{{course.course_desc}}</p>
+                <!-- <button class="btn btn-primary btn-md btn-block" type="submit" style="background: #00304e">
+                    View Profile
+                </button> -->
+              </div>
+            </div>
+            {% endfor %}
+  
+           
+            </div>
+      </section>
+      <br>
+      <section id="services" class="services section-bg">
+        <div class="container" data-aos="fade-up">
+          <header class="section-header">
+            <h3>Complaints to be resolved</h3>
+          </header>
+  
+          <div class="justify-content-center align-items-center">
+            <form method="" action="">
+              <input type="" value="" style="
+                    background-color: rgb(216, 237, 250);
+                    border-color: #000000;
+                    border-width: 1px;
+                  " placeholder="Search.." />
+            </form>
+          </div>
+  
+          <br />
+  
+          <div class="row g-5">
+            {% for course in courses %}
+            <div class="col-md-6 col-lg-4 wow bounceInUp" data-aos="zoom-in" data-aos-delay="100">
+              <div class="box">
+                <div class="icon" style="background: rgb(209, 237, 255)">
+                  <i class="bi bi-journal-text" style="color: #1985f0"></i>
+                </div>
+                <h3 class="title"><a href="{{ url_for('view_course') }}?viewer=admin&course_id={{course['course_id']}}&mentee_id=0">{{course.course_name}}</a></h3>
                 <p class="description">{{course.course_desc}}</p>
                 <!-- <button class="btn btn-primary btn-md btn-block" type="submit" style="background: #00304e">
                     View Profile
