--- a/templates/dashboard_mentor.html
+++ b/templates/dashboard_mentor.html
@@ -121,7 +121,24 @@
           <br />
 
           <div class="row g-5">
-            <div
+            {% for course in courses %}
+            <div class="col-md-6 col-lg-4 wow bounceInUp" data-aos="zoom-in" data-aos-delay="100">
+              <div class="box">
+                <div class="icon" style="background: rgb(209, 237, 255)">
+                  <i class="bi bi-journal-text" style="color: #1985f0"></i>
+                </div>
+                <h3 class="title"><a href="{{ url_for('view_course') }}?viewer=mentor&course_id={{course['course_id']}}&mentee_id=0">{{course.course_name}}</a></h3>
+                <h5 style="font-size: small">Course Status: {{course.course_status}}</h5>
+                <p class="description">{{course.course_desc}}</p>
+                <!-- <button class="btn btn-primary btn-md btn-block" type="submit" style="background: #00304e">
+                    View Profile
+                </button> -->
+              </div>
+            </div>
+            {% endfor %}
+  
+           
+            <!-- <div
               class="col-md-6 col-lg-4 wow bounceInUp"
               data-aos="zoom-in"
               data-aos-delay="100"
@@ -166,7 +183,7 @@
                 <p class="description">description of course</p>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
       </section>
       <!-- End Services Section -->
