--- a/templates/landing.html
+++ b/templates/landing.html
@@ -42,6 +42,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a href="{{url_for('admin')}}">Admin</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -233,7 +234,7 @@
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-2 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="../static/assets/img/team-1.jpg" class="img-fluid" alt="">
               <div class="member-info">
@@ -251,7 +252,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-2 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <img src="../static/assets/img/team-2.jpg" class="img-fluid" alt="">
               <div class="member-info">
@@ -269,7 +270,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-2 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
               <img src="../static/assets/img/team-3.jpg" class="img-fluid" alt="">
               <div class="member-info">
@@ -287,13 +288,31 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-2 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <img src="../static/assets/img/team-4.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Amanda Jepson</h4>
                   <span>Accountant</span>
+                  <div class="social">
+                    <a href=""><i class="bi bi-twitter"></i></a>
+                    <a href=""><i class="bi bi-facebook"></i></a>
+                    <a href=""><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="member">
+              <img src="../static/assets/img/team-1.jpg" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Walter White</h4>
+                  <span>Chief Executive Officer</span>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
