--- a/templates/feedback_form.html
+++ b/templates/feedback_form.html
@@ -80,6 +80,7 @@
         <div class="col-md-12" style="font-size: medium;">
             <div class="p-3 py-5">
                 <form>
+               <input type="hidden" name="course_id" value="{{ course_id }}">
                 <div class="row mt-2">
                     
                     <div class="col-md-12"><label class="labels"><b>Overall Rating</b></label></div>
