Update my_courses_page_mentee.html - to integrate with feedback

--- a/templates/my_courses_page_mentee.html
+++ b/templates/my_courses_page_mentee.html
@@ -98,7 +98,7 @@
             <b
               >Kindly provide us
               <u
-                ><a href="feedback_form.html" style="color: #59a7d7"
+                > <a href="feedback_form.html?course_id={{ course.course_id }}" style="color: #59a7d7"
                   >feedback here</a
                 ></u
               >, so we can improve our services and let the mentor know how you
